adicionado configuracoes do smtp para envio de email

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,7 +5,7 @@
   "Smtp":{
     "Host":"smtp.sendgrid.net",
     "Port":"587",
-    "UserName":"api_key",
+    "UserName":"apikey",
     "Password":"minhasenha"
   },
   "Logging": {
